@@ -1,12 +1,11 @@
 package com.hypixel.hytale.builtin.hytalegenerator.density.nodes;
 
+import com.hypixel.hytale.builtin.hytalegenerator.ReusableList;
 import com.hypixel.hytale.builtin.hytalegenerator.VectorUtil;
 import com.hypixel.hytale.builtin.hytalegenerator.density.Density;
 import com.hypixel.hytale.builtin.hytalegenerator.positionproviders.PositionProvider;
 import com.hypixel.hytale.math.vector.Vector3d;
 import it.unimi.dsi.fastutil.doubles.Double2DoubleFunction;
-import java.util.ArrayList;
-import java.util.function.Consumer;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
@@ -20,6 +19,26 @@ public class PositionsTwistDensity extends Density {
    private double maxDistance;
    private boolean distanceNormalized;
    private boolean zeroPositionsY;
+   @Nonnull
+   private final Vector3d rMin;
+   @Nonnull
+   private final Vector3d rMax;
+   @Nonnull
+   private final Vector3d rSamplePoint;
+   @Nonnull
+   private final Vector3d rQueryPosition;
+   @Nonnull
+   private final Vector3d rWarpVector;
+   @Nonnull
+   private final ReusableList<Vector3d> rWarpVectors;
+   @Nonnull
+   private final ReusableList<Double> rWarpDistances;
+   @Nonnull
+   private final ReusableList<Double> rWeights;
+   @Nonnull
+   private final PositionProvider.Context rPositionsContext;
+   @Nonnull
+   private final Density.Context rChildContext;
 
    public PositionsTwistDensity(
       @Nullable Density input,
@@ -44,6 +63,48 @@ public class PositionsTwistDensity extends Density {
          this.maxDistance = maxDistance;
          this.distanceNormalized = distanceNormalized;
          this.zeroPositionsY = zeroPositionsY;
+         this.rMin = new Vector3d();
+         this.rMax = new Vector3d();
+         this.rSamplePoint = new Vector3d();
+         this.rQueryPosition = new Vector3d();
+         this.rWarpVector = new Vector3d();
+         this.rWarpVectors = new ReusableList<>();
+         this.rWarpDistances = new ReusableList<>();
+         this.rWeights = new ReusableList<>();
+         this.rPositionsContext = new PositionProvider.Context();
+         this.rChildContext = new Density.Context();
+      }
+   }
+
+   public void consumer(@Nonnull Vector3d p) {
+      double distance = p.distanceTo(this.rQueryPosition);
+      if (!(distance > this.maxDistance)) {
+         double normalizedDistance = distance / this.maxDistance;
+         this.rWarpVector.assign(this.rSamplePoint);
+         double twistAngle;
+         if (this.distanceNormalized) {
+            twistAngle = this.twistCurve.applyAsDouble(normalizedDistance);
+         } else {
+            twistAngle = this.twistCurve.applyAsDouble(distance);
+         }
+
+         twistAngle /= 180.0;
+         twistAngle *= Math.PI;
+         this.rWarpVector.subtract(p);
+         VectorUtil.rotateAroundAxis(this.rWarpVector, this.twistAxis, twistAngle);
+         this.rWarpVector.add(p);
+         this.rWarpVector.subtract(this.rSamplePoint);
+         if (this.rWarpVectors.isAtHardCapacity()) {
+            this.rWarpVectors.expandAndSet(this.rWarpVector.clone());
+         } else {
+            this.rWarpVectors.expandAndGet().assign(this.rWarpVector);
+         }
+
+         if (this.distanceNormalized) {
+            this.rWarpDistances.expandAndSet(normalizedDistance);
+         } else {
+            this.rWarpDistances.expandAndSet(distance);
+         }
       }
    }
 
@@ -54,76 +115,52 @@ public class PositionsTwistDensity extends Density {
       } else if (this.positions == null) {
          return this.input.process(context);
       } else {
-         Vector3d min = new Vector3d(context.position.x - this.maxDistance, context.position.y - this.maxDistance, context.position.z - this.maxDistance);
-         Vector3d max = new Vector3d(context.position.x + this.maxDistance, context.position.y + this.maxDistance, context.position.z + this.maxDistance);
-         Vector3d samplePoint = context.position.clone();
-         Vector3d queryPosition = context.position.clone();
+         this.rMin.assign(context.position.x - this.maxDistance, context.position.y - this.maxDistance, context.position.z - this.maxDistance);
+         this.rMax.assign(context.position.x + this.maxDistance, context.position.y + this.maxDistance, context.position.z + this.maxDistance);
+         this.rSamplePoint.assign(context.position);
+         this.rQueryPosition.assign(context.position);
          if (this.zeroPositionsY) {
-            queryPosition.y = 0.0;
-            min.y = -1.0;
-            max.y = 1.0;
+            this.rQueryPosition.y = 0.0;
+            this.rMin.y = -1.0;
+            this.rMax.y = 1.0;
          }
 
-         ArrayList<Vector3d> warpVectors = new ArrayList<>(10);
-         ArrayList<Double> warpDistances = new ArrayList<>(10);
-         Consumer<Vector3d> consumer = p -> {
-            double distance = p.distanceTo(queryPosition);
-            if (!(distance > this.maxDistance)) {
-               double normalizedDistance = distance / this.maxDistance;
-               Vector3d warpVectorx = samplePoint.clone();
-               double twistAngle;
-               if (this.distanceNormalized) {
-                  twistAngle = this.twistCurve.applyAsDouble(normalizedDistance);
-               } else {
-                  twistAngle = this.twistCurve.applyAsDouble(distance);
-               }
-
-               twistAngle /= 180.0;
-               twistAngle *= Math.PI;
-               warpVectorx.subtract(p);
-               VectorUtil.rotateAroundAxis(warpVectorx, this.twistAxis, twistAngle);
-               warpVectorx.add(p);
-               warpVectorx.subtract(samplePoint);
-               warpVectors.add(warpVectorx);
-               if (this.distanceNormalized) {
-                  warpDistances.add(normalizedDistance);
-               } else {
-                  warpDistances.add(distance);
-               }
-            }
-         };
-         PositionProvider.Context positionsContext = new PositionProvider.Context(min, max, consumer, null, context.workerId);
-         this.positions.positionsIn(positionsContext);
-         if (warpVectors.isEmpty()) {
+         this.rWarpVectors.clear();
+         this.rWarpDistances.clear();
+         this.rPositionsContext.minInclusive = this.rMin;
+         this.rPositionsContext.maxExclusive = this.rMax;
+         this.rPositionsContext.consumer = this::consumer;
+         this.positions.positionsIn(this.rPositionsContext);
+         if (this.rWarpVectors.getSoftSize() == 0) {
             return this.input.process(context);
-         } else if (warpVectors.size() == 1) {
-            Vector3d warpVector = warpVectors.getFirst();
-            samplePoint.add(warpVector);
+         } else if (this.rWarpVectors.getSoftSize() == 1) {
+            Vector3d warpVector = this.rWarpVectors.get(0);
+            this.rSamplePoint.add(warpVector);
             Density.Context childContext = new Density.Context(context);
-            childContext.position = samplePoint;
+            childContext.position = this.rSamplePoint;
             return this.input.process(childContext);
          } else {
-            int possiblePointsSize = warpVectors.size();
-            ArrayList<Double> weights = new ArrayList<>(warpDistances.size());
+            int possiblePointsSize = this.rWarpVectors.getSoftSize();
+            this.rWeights.clear();
             double totalWeight = 0.0;
 
             for (int i = 0; i < possiblePointsSize; i++) {
-               double distance = warpDistances.get(i);
+               double distance = this.rWarpDistances.get(i);
                double weight = 1.0 - distance;
-               weights.add(weight);
+               this.rWeights.expandAndSet(weight);
                totalWeight += weight;
             }
 
             for (int i = 0; i < possiblePointsSize; i++) {
-               double weight = weights.get(i) / totalWeight;
-               Vector3d warpVector = warpVectors.get(i);
+               double weight = this.rWeights.get(i) / totalWeight;
+               Vector3d warpVector = this.rWarpVectors.get(i);
                warpVector.scale(weight);
-               samplePoint.add(warpVector);
+               this.rSamplePoint.add(warpVector);
             }
 
-            Density.Context childContext = new Density.Context(context);
-            childContext.position = samplePoint;
-            return this.input.process(childContext);
+            this.rChildContext.assign(context);
+            this.rChildContext.position = this.rSamplePoint;
+            return this.input.process(this.rChildContext);
          }
       }
    }
